crates/language-v2/tests/src/fail/parsing/duplicate_set_entry/test.stderr
error: Set entries must be unique.
 --> src/fail/parsing/duplicate_set_entry/test.rs:9:26
  |
9 |     versions = ["1.0.0", "1.0.0", "3.0.0"],
  |                          ^^^^^^^
